# apl-client-library

./: BuildOptions.cmake  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  THIRD-PARTY.txt
APLClient/: CMakeLists.txt
APLClient/include/APLClient/: AplClientBinding.h  AplClientRenderer.h  AplCommandExecutionEvent.h  AplCoreAudioPlayer.h  AplCoreAudioPlayerFactory.h  AplCoreConnectionManager.h  AplCoreEngineLogBridge.h  AplCoreGuiRenderer.h  AplCoreMediaPlayer.h  AplCoreMediaPlayerFactory.h  AplCoreMetrics.h  AplCoreTextMeasurement.h  AplCoreViewhostMessage.h  AplOptionsInterface.h  AplRenderingEvent.h  AplSession.h  AplViewhostConfig.h
APLClient/include/APLClient/Extensions/: AplCoreExtensionEventCallbackInterface.h  AplCoreExtensionEventCallbackResultInterface.h  AplCoreExtensionEventHandlerInterface.h  AplCoreExtensionExecutor.h  AplCoreExtensionInterface.h  AplCoreExtensionManager.h  AplCoreExtensionSupportedExtension.h  AplDocumentState.h
APLClient/include/APLClient/Extensions/AttentionSystem/: AplAttentionSystemExtension.h
APLClient/include/APLClient/Extensions/AudioPlayer/: AplAudioPlayerAlarmsExtension.h  AplAudioPlayerAlarmsExtensionObserverInterface.h  AplAudioPlayerExtension.h  AplAudioPlayerExtensionObserverInterface.h
APLClient/include/APLClient/Extensions/Backstack/: AplBackstackExtension.h  AplBackstackExtensionObserver.h
APLClient/include/APLClient/Extensions/E2EEncryption/: AplE2EEncryptionExtension.h
APLClient/include/APLClient/Telemetry/: AplMetricsRecorder.h  AplMetricsSinkInterface.h  DownloadMetricsEmitter.h  NullAplMetricsRecorder.h
APLClient/src/: AplClientBinding.cpp  AplClientRenderer.cpp  AplCoreAudioPlayer.cpp  AplCoreAudioPlayerFactory.cpp  AplCoreConnectionManager.cpp  AplCoreGuiRenderer.cpp  AplCoreMediaPlayer.cpp  AplCoreMediaPlayerFactory.cpp  AplCoreTextMeasurement.cpp  AplSession.cpp  AplViewhostConfig.cpp  CMakeLists.txt
APLClient/src/Extensions/: AplCoreExtensionExecutor.cpp  AplCoreExtensionManager.cpp
APLClient/src/Extensions/AttentionSystem/: AplAttentionSystemExtension.cpp
APLClient/src/Extensions/Backstack/: AplBackstackExtension.cpp
APLClient/src/Extensions/E2EEncryption/: AplE2EEncryptionExtension.cpp
APLClient/src/Telemetry/: AplMetricsRecorder.cpp  DownloadMetricsEmitter.cpp
APLClient/test/: AplCoreConnectionManagerTest.cpp  AplCoreGuiRendererTest.cpp  AplSessionTest.cpp  CMakeLists.txt  MockAplCoreConnectionManager.h  MockAplOptionsInterface.h
APLClient/test/Extensions/: AplCoreExtensionManagerTest.cpp
APLClient/test/Extensions/AudioPlayer/: AplAudioPlayerExtensionTest.cpp
APLClient/test/Telemetry/: AplMetricsRecorderTest.cpp
APLClientSandbox/: README.md
APLClientSandbox/GUI/: index.html  package.json  script.js  server.js  style.css
APLClientSandbox/include/APLClientSandbox/: AplClientBridge.h  AplMetricsStreamSink.h
APLClientSandbox/src/: AplClientBridge.cpp  AplMetricsStreamSink.cpp  CMakeLists.txt  GUIManager.cpp  main.cpp
apl-client-js/: APLAudioPlayer.d.ts  APLAudioPlayerFactory.d.ts  APLClient.d.ts  APLConfigurationChange.d.ts  APLContext.d.ts  APLMediaPlayer.d.ts  APLMediaPlayerFactory.d.ts  APLRadii.d.ts  APLWSRenderer.d.ts  ExtensionFactories.d.ts  ExtensionMessageHandler.d.ts  Transforms.d.ts  WebSocketClient.d.ts  apl-client-attribution.txt  index.d.ts  index.js  package.json
apl-client-js/@types/apl-html/lib/: APLRenderer.d.ts  CommandFactory.d.ts  ComponentFactory.d.ts  Content.d.ts  index.d.ts
apl-client-js/@types/apl-html/lib/components/: ActionableComponent.d.ts  Component.d.ts  Container.d.ts  EditText.d.ts  Frame.d.ts  GridSequence.d.ts  Image.d.ts  MultiChildScrollable.d.ts  ScrollView.d.ts  Scrollable.d.ts  Sequence.d.ts  TouchWrapper.d.ts
apl-client-js/@types/apl-html/lib/dts/: Action.d.ts  AudioPlayer.d.ts  AudioPlayerFactory.d.ts  Component.d.ts  ConfigurationChange.d.ts  Content.d.ts  Context.d.ts  Event.d.ts  Extension.d.ts  ExtensionClient.d.ts  Graphic.d.ts  GraphicElement.d.ts  GraphicPattern.d.ts  Keyboard.d.ts  LiveArray.d.ts  LiveMap.d.ts  Logger.d.ts  MediaPlayer.d.ts  MediaPlayerFactory.d.ts  Metrics.d.ts  Module.d.ts  Radii.d.ts  Rect.d.ts  RootConfig.d.ts  StyledText.d.ts
apl-client-js/@types/apl-html/lib/enums/: AnimationQuality.d.ts  AudioPlayerEventType.d.ts  AudioTrack.d.ts  BlendMode.d.ts  CommandAudioTrack.d.ts  CommandControlMedia.d.ts  CommandHighlightMode.d.ts  CommandPosition.d.ts  CommandScrollAlign.d.ts  CommandType.d.ts  ComponentType.d.ts  ContainerDirection.d.ts  DisplayState.d.ts  DocumentPropertyKey.d.ts  EventProperty.d.ts  EventType.d.ts  FilterType.d.ts  FlexboxAlign.d.ts  FlexboxJustifyContent.d.ts  FontStyle.d.ts  GradientSpreadMethod.d.ts  GradientType.d.ts  GradientUnits.d.ts  GraphicElementType.d.ts  GraphicFilterType.d.ts  GraphicPropertyKey.d.ts  ImageAlign.d.ts  ImageScale.d.ts  KeyboardType.d.ts  LayoutDirection.d.ts  LogLevel.d.ts  Navigation.d.ts  NoiseFilterKind.d.ts  PointerEventType.d.ts  PointerType.d.ts  Position.d.ts  PropertyKey.d.ts  ScrollDirection.d.ts  TextAlign.d.ts  TextAlignVertical.d.ts  (+5 more)
apl-client-js/@types/apl-html/lib/extensions/: CreateExtension.d.ts  IExtension.d.ts  IExtensionEventCallbackResult.d.ts  IExtensionManager.d.ts  LiveArray.d.ts  LiveMap.d.ts
apl-client-js/@types/apl-html/lib/logging/: ILogger.d.ts  LogLevel.d.ts  LogTransport.d.ts  (+1 more)
apl-client-js/@types/eventemitter3/: index.d.ts
apl-client-js/avg/: APLGraphic.d.ts  APLGraphicElement.d.ts  APLGraphicPattern.d.ts  GraphicProperties.d.ts
(+53 files in other folders)
